--- a/Views/Attendance/ViewAttendance.cshtml
+++ b/Views/Attendance/ViewAttendance.cshtml
@@ -70,13 +70,20 @@
                     "url": "/Attendance/DataAttendance",
                     "type": "GET",
                     "dataSrc": function (json) {
-                        if (json.error) {
-                            alert(json.error);
-                            window.location.href = "/Account/Login";
-                            return [];
+                            if (json.error) {
+                                alert(json.error);
+
+                                if (!json.status) {
+                                    window.location.href = "/Account/Login";
+                                } else {
+                                    window.location.href = "/Teacher/Index";
+                                }
+
+                                return []; // توقف تحميل البيانات
+                            }
+
+                            return json.data; // في حال عدم وجود خطأ، أرجع البيانات للجدول
                         }
-                        return json.data;
-                    }
                 },
                 "columns": [
                     { "data": "studentName"},
