--- a/Views/Grades/MarkStudent.cshtml
+++ b/Views/Grades/MarkStudent.cshtml
@@ -41,25 +41,41 @@
         </table>
     </div>
 </div>
-
+@{
+    var role = Context.Session.GetString("Role");
+}
 @section Scripts {
     <script>
         $(document).ready(function () {
             var idStudent = @Html.Raw(ViewBag.IdStudent);
+            var role = "@role";
             $('#studentsTable').DataTable({
-                deferRender: true,
-                processing: true,
-                serverSide: true,
-                ajax: {
-                    url: "/Grades/DataGradesStudent?studentid=" + idStudent,
-                    type: "GET",
-                    dataSrc: function (json) {
-                        if (json.error) {
-                            alert(json.error);
-                            window.location.href = "/Account/Login";
-                            return [];
+                "deferRender": true,
+                "processing": true,
+                "serverSide": true,
+                "ajax": {
+                    "ajax": {
+                        "url": "/Grades/DataGradesStudent?studentid="+idStudent,
+                        "type": "GET",
+                        "dataSrc": function (json) {
+                            if (json.error) {
+                                alert(json.error);
+
+                                if (!json.status) {
+                                    window.location.href = "/Account/Login";
+                                } else {
+                                    if (role === "Menegar") {
+                                        window.location.href = "/Menegar/Index";
+                                    } else {
+                                        window.location.href = "/Student/Index";
+                                    }
+                                }
+
+                                return []; // توقف تحميل البيانات
+                            }
+
+                            return json.data; // في حال عدم وجود خطأ، أرجع البيانات للجدول
                         }
-                        return json.data;
                     }
                 },
                 columns: [
