--- a/Views/Lectuer/LectuerView.cshtml
+++ b/Views/Lectuer/LectuerView.cshtml
@@ -47,22 +47,21 @@
     <script>
         $(document).ready(function () {
             $('#lectuerTable').DataTable({
-                responsive: true,
-                processing: true,
-                serverSide: true,
-                deferRender: true,
-                ajax: {
-                    url: "/Lectuer/Lectuers",
-                    type: "GET",
-                    dataSrc: function (json) {
+                "responsive": true,
+                "processing": true,
+                "serverSide": true,
+                "deferRender": true,
+                "ajax": {
+                    "url": "/Lectuer/Lectuers",
+                    "type": "GET",
+                    "dataSrc": function (json) {
                         if (json.error) {
-                            Swal.fire({
-                                icon: 'error',
-                                title: 'خطأ',
-                                text: json.error
-                            }).then(() => {
+                            if(!json.status){
+                                alert(json.error);
                                 window.location.href = "/Account/Login";
-                            });
+                            }
+                            alert(json.error);
+                            window.location.href = "/Menegar/Index";
                             return [];
                         }
                         return json.data;
