--- a/Views/Teacher/Students.cshtml
+++ b/Views/Teacher/Students.cshtml
@@ -32,8 +32,12 @@
                     "type": "GET",
                     "dataSrc": function (json) {
                         if (json.error) {
+                            if(!json.status){
+                                alert(json.error);
+                                window.location.href = "/Account/Login";
+                            }
                             alert(json.error);
-                            window.location.href = "/Account/Login";
+                            window.location.href = "/Teacher/Index";
                             return [];
                         }
                         return json.data;
