--- a/Views/Attendance/ViewAttendance.cshtml
+++ b/Views/Attendance/ViewAttendance.cshtml
@@ -6,8 +6,8 @@
 
 <h1>متابعة الحضور والغياب للطلاب</h1>
 <div class="dropdown">
-    <button class="btn btn-success dropdown-toggle" type="button" id="dropdownNewMark" data-bs-toggle="dropdown" aria-expanded="false">
-        تسجيل الحضور و الغياب
+    <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownNewMark" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-plus-circle"></i> تسجيل الحضور و الغياب 
     </button>
     <ul class="dropdown-menu p-3" aria-labelledby="dropdownNewMark" style="min-width: 250px;">
         <li class="form-group mb-2">
@@ -25,8 +25,8 @@
             </select>
         </li>
     </ul>
+    <a class="btn btn-outline-dark" asp-controller="Teacher" asp-action="Index"><i class="bi bi-arrow-left"></i> عودة</a>
 </div>
-<a class="btn btn-dark" asp-controller="Teacher" asp-action="Index"> عودة</a>
 
 <hr>
 <table id="studentsTable" class="display" style="width:100%">
@@ -59,15 +59,18 @@
 
 @section Scripts {
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js" defer></script>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <script>
         $(document).ready(function () {
+            var idTeacher = @Html.Raw(ViewBag.IdTeacher);
+            console.log("Teacher ID: " + idTeacher); // للتأكد من أن المعرف يتم تمريره بشكل صحيح
             $('#studentsTable').DataTable({
                 "deferRender": true,
                 "processing": true,
                 "serverSide": true,
                 "ajax": {
-                    "url": "/Attendance/DataAttendance",
+                    "url": "/Attendance/DataAttendance?teacherId="+idTeacher,
                     "type": "GET",
                     "dataSrc": function (json) {
                             if (json.error) {
@@ -113,7 +116,7 @@
                    {
                          "data": null,
                         "render": function (data, type, row) {
-                                return`<a class="btn btn-warning" href="/Attendance/Edit/${row.id}">تعديل</a>`;
+                                return`<a class="btn btn-outline-warning" href="/Attendance/Edit/${row.id}">تعديل</a>`;
                             
                         }
                     }
