--- a/Views/Teacher/Index.cshtml
+++ b/Views/Teacher/Index.cshtml
@@ -10,7 +10,11 @@
             <div class="card shadow-sm border-0 rounded-4">
                 <div class="card-body text-center bg-light p-3 p-md-4">
                     <a class="btn btn-lg btn-outline-primary w-100" asp-controller="Profile" asp-action="IndexProfile">
-                        <i class="bi bi-person-circle"></i> معلوماتي الشخصية
+                        <i class="bi bi-person-circle"></i> معلوماتي الشخصية 
+                    </a>
+                    @*<a href="/Teacher/DownloadTeacherCertificate?idTeacher=7">تحميل الشهادة</a>*@
+                    <a class="btn btn-lg btn-outline-success w-100" asp-action="DownloadTeacherCertificate" asp-route-idTeacher="@Model.Id" >
+                        <i class="bi bi-file-earmark-arrow-up"></i>  شهادة قيد
                     </a>
                 </div>
             </div>
