--- a/Views/Profile/Edit.cshtml
+++ b/Views/Profile/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="container mt-5">
     <div class="card shadow-lg">
         <div class="card-header bg-primary text-white">
-            <h4 class="mb-0">تعديل المعلومات الشخصية</h4>
+            <h4 class="mb-0">تعديل المعلومات الشخصية @Model.Id</h4>
         </div>
         <div class="card-body">
             <form asp-action="Edit">
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label asp-for="Name" class="control-label">الاسم</label>
+                            <label asp-for="Name" class="control-label">الاسم @Model.Id</label>
                             <input asp-for="Name" class="form-control" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
